# monitoring-arch

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  Makefile  README.md  alerting-notification-reminder-guide.md  app.db  check_env.py  cookies.txt  metric.py.old  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  threshold.py.old
server/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  alembic.ini  celerybeat-schedule  diag_incidents.py  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  sitecustomize.py
server/app/: __init__.py  main.py
server/app/api/: __init__.py  deps.py
server/app/api/schemas/: __init__.py  client.py  client_settings.py  http_target.py  ingest.py  machine_detail.py  metric_pause.py
server/app/api/v1/: __init__.py  router.py
server/app/api/v1/endpoints/: __init__.py  alerts.py  auth.py  dashboard.py  health.py  http_targets.py  incidents.py  ingest.py  machines.py  metrics.py  notifications.py  settings.py
server/app/api/v1/serializers/: client_settings.py  http_target.py  machine.py
server/app/application/: __init__.py
server/app/application/services/: __init__.py  baseline_service.py  evaluation_service.py  heartbeat_service.py  http_monitor_service.py  ingestion_service.py  machine_status_service.py  metric_freshness_service.py  notification_service.py  registration_service.py
server/app/core/: __init__.py  config.py  exceptions.py  logging.py  middleware.py  security.py
server/app/core/utils/: datetime.py
server/app/domain/: policies.py
server/app/infrastructure/: __init__.py
server/app/infrastructure/messaging/: events.py  outbox.py
server/app/migrations/: __init__.py  env.py
server/app/migrations/versions/: 0001_initial.py  0002_seed_builtin_metrics.py  0002_seed_dev_data.py  0003_fix_temperature_coretemp_dynamic_family.py  __init__.py
server/app/presentation/api/: deps.py
server/app/presentation/api/schemas/: agent_metric.py  (+3 more)
server/app/workers/: __init__.py  celery_app.py
server/app/workers/scheduler/: beat_schedule.py
server/app/workers/tasks/: __init__.py  evaluation_tasks.py  heartbeat_tasks.py  http_monitoring_tasks.py  ingest_tasks.py  machine_status_tasks.py  maintenance_tasks.py  notification_tasks.py  outbox_tasks.py
server/monitoring_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/scripts/: PROVISIONING.md  provision_from_ini.py
server/scripts/provisioning/: demo.ini  frederic-gilgarcia.ini  smarthack.ini
server/tests/: __init__.py  conftest.py  test_evaluation_machine_paths.py  test_health.py  test_http_targets_integration.py
server/tests/auth/: test_crypto_and_tokens.py
server/tests/contract/machine_ingest_api/: conftest.py  test_ingest_agent_payload_mapping.py  test_time_window.py
server/tests/e2e/: conftest.py  test_e2e_incident_lifecycle.py  test_end_to_end_notify.py
server/tests/integration/: _dbutils.py  conftest.py  test_api_alerts.py  test_auth_flow.py  test_endpoints_smoke.py  test_health.py  test_http_monitor_cooldown.py  test_http_target_repository_contract.py  test_http_targets_create_param.py  test_http_targets_integration.py  test_incident_repository_contract.py  test_ingest_idempotency.py  test_notify_alert_pg_redis.py  test_outbox_flow.py
server/tests/migrations/: test_0001_initial.py
server/tests/unit/: conftest.py  test_endpoints_full.py  test_endpoints_minimal.py  test_evaluation_service.py  test_http_monitor_service.py  test_http_monitor_success.py  test_http_targets_crud.py  test_http_targets_post_errors.py  test_incident_repository_open.py  test_ingest_endpoint.py  test_match_conditions.py  test_metrics_404.py  test_metrics_endpoints_paths.py  test_metrics_thresholds.py  test_notification_service.py  test_notification_utils.py  test_notify_alert_cooldown.py  test_schemas_client.py  test_schemas_http_target.py  test_slack_provider.py
server/tests/unit/domain/: test_match_condition.py
webapp/: .dockerignore  Dockerfile.dev  Dockerfile.prod  README.md  pyproject.toml  requirements-generated.txt  requirements.txt  routes.py
webapp/app/: auth_guard.py  config.py  main.py  version.py
webapp/app/static/: styles.css
webapp/app/static/favicon/: site.webmanifest
webapp/app/static/js/: events.js  machines.js  main.js  settings.js  sites.js  timefmt.js
webapp/app/templates/: dashboard.html  login.html
webapp/app/templates/fragments/: _footer.html  _head.html  events.html  machine_detail.html  machine_detail_inner.html  machines.html  no_machine.html  settings.html  sites.html
(+76 files in other folders)
