[project]
name = "monitoring-server"
version = "0.2.1"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy>=2.0",
  "psycopg[binary]",
  "alembic",
  "pydantic>=2",
  "pydantic-settings>=2",
  "celery",
  "redis",
  "httpx",
  "python-dotenv",
  "email-validator",
  "requests"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
