[project]
name = "monitoring-server-app"
version = "0.2.1"
description = "Application de monitoring HTTP et de serveurs"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111,<0.112",
    "uvicorn[standard]>=0.29,<0.31",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "psycopg[binary,pool]>=3.1,<4.0",
    "alembic>=1.12,<2.0",
    "httpx>=0.27,<0.28",
    "celery>=5.3,<6.0",
    "redis>=5.0,<6.0",
    "python-dotenv>=1.0,<2.0",
    "jinja2>=3.1,<4.0",
    "requests>=2.31,<3.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"
