[tool.poetry]
name = "neonmonitor-web"
version = "1.0.0"
description = "NeonMonitor Web Interface"
authors = ["Frédéric GIL GARCIA <frederic.gilgarcia@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.111,<0.112"
uvicorn = {extras = ["standard"], version = ">=0.29,<0.31"}
pydantic = ">=2.7,<3.0"
pydantic-settings = ">=2.2,<3.0"
httpx = ">=0.27,<0.28"
jinja2 = ">=3.1,<4.0"
python-dotenv = ">=1.0,<2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 3000"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"